--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "babel-node --presets=es2015,stage-2 -- app.js",
-    "dev": "nodemon --exec babel-node --presets=es2015,stage-2 -- app.js"
+    "start": "babel-node --presets=es2015,stage-2 -- bin/www",
+    "dev": "nodemon --exec babel-node --presets=es2015,stage-2 -- bin/www"
   },
   "dependencies": {
     "babel-cli": "^6.14.0",
